# worklock

./: .gitignore  CMakeLists.txt  GradientBackground.qml  Header.qml  README.md  RippleMask.qml  TimerButton.qml  _clang-format  conanfile.txt  main.cpp  main.qml  qml.qrc
qmllivereload/: CMakeLists.txt  localfileswatcher.cpp  localfileswatcher.h  qmllivereload.cpp  qmllivereload.h  recursivedirwatcher.cpp  recursivedirwatcher.h  sourcefileswatcher.cpp  sourcefileswatcher.h
